// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin Markdown blockquote 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "bar",
            },
          ],
          "component": "Paragraph",
          "id": "123",
          "type": "instance",
        },
      ],
      "component": "Blockquote",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [],
}
`;

exports[`Plugin Markdown bold 1 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "bold",
            },
          ],
          "component": "Bold",
          "id": "123",
          "type": "instance",
        },
      ],
      "component": "Paragraph",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [],
}
`;

exports[`Plugin Markdown bold 2 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "bold",
            },
          ],
          "component": "Bold",
          "id": "123",
          "type": "instance",
        },
      ],
      "component": "Paragraph",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [],
}
`;

exports[`Plugin Markdown h1 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "type": "text",
          "value": "heading",
        },
      ],
      "component": "Heading",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [
    {
      "id": "123",
      "instanceId": "123",
      "name": "tag",
      "type": "string",
      "value": "h1",
    },
  ],
}
`;

exports[`Plugin Markdown h6 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "type": "text",
          "value": "heading",
        },
      ],
      "component": "Heading",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [
    {
      "id": "123",
      "instanceId": "123",
      "name": "tag",
      "type": "string",
      "value": "h6",
    },
  ],
}
`;

exports[`Plugin Markdown hard line break 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "type": "text",
          "value": "foo",
        },
        {
          "type": "text",
          "value": "baz",
        },
      ],
      "component": "Paragraph",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [],
}
`;

exports[`Plugin Markdown image 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "children": [],
          "component": "Image",
          "id": "123",
          "type": "instance",
        },
      ],
      "component": "Paragraph",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [
    {
      "id": "123",
      "instanceId": "123",
      "name": "src",
      "type": "string",
      "value": "/url",
    },
    {
      "id": "123",
      "instanceId": "123",
      "name": "title",
      "type": "string",
      "value": "title",
    },
    {
      "id": "123",
      "instanceId": "123",
      "name": "alt",
      "type": "string",
      "value": "foo",
    },
  ],
}
`;

exports[`Plugin Markdown italic 1 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "italic",
            },
          ],
          "component": "Italic",
          "id": "123",
          "type": "instance",
        },
      ],
      "component": "Paragraph",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [],
}
`;

exports[`Plugin Markdown italic 2 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "italic",
            },
          ],
          "component": "Italic",
          "id": "123",
          "type": "instance",
        },
      ],
      "component": "Paragraph",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [],
}
`;

exports[`Plugin Markdown link 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "link",
            },
          ],
          "component": "RichTextLink",
          "id": "123",
          "type": "instance",
        },
      ],
      "component": "Paragraph",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [
    {
      "id": "123",
      "instanceId": "123",
      "name": "href",
      "type": "string",
      "value": "/uri",
    },
    {
      "id": "123",
      "instanceId": "123",
      "name": "title",
      "type": "string",
      "value": "Title",
    },
  ],
}
`;

exports[`Plugin Markdown paragraph 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "type": "text",
          "value": "xyz",
        },
      ],
      "component": "Paragraph",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [],
}
`;

exports[`Plugin Markdown soft line break 1`] = `
{
  "instances": [
    {
      "children": [
        {
          "type": "text",
          "value": "foo
baz",
        },
      ],
      "component": "Paragraph",
      "id": "123",
      "type": "instance",
    },
  ],
  "props": [],
}
`;
